# massim

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.github/workflows/: main.yml
src/: main.cpp
src/cpp/: common.h  dataframe.h  distribution.cpp  distribution.h  fft_transformer.cpp  fft_transformer.h  gradient_response.cpp  gradient_response.h  mass_tracker.cpp  mass_tracker.h  mass_transformer.cpp  mass_transformer.h  metrics.cpp  metrics.h  profile_generator.cpp  profile_generator.h  rng.h  smallmap.h  spectra.h  utils.cpp  utils.h
src/cpp/tests/: profile_prof.cpp  smallmap_test.cpp
src/massim/: __init__.py  all.py  data_analysis.py  distributions.py  experiment.py  filters.py  gradient_response.py  graph_based.py  graph_util.py  mass_distribution.py  metric.py  noise.py  parser.py  plotting.py  profile.py  sampling.py  simulator.py  species_config.py  stats.py  transformations.py  tst_exp.py  utils.py
src/massim/data/emerge_stats/: intensity_distributions.csv  masses.csv  transform_stats.csv  transform_stats_nr.csv
tests/: test_build.py
