[project]
name = "massim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "theinfinitegirl", email = "gretchenlynhall@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "igraph>=1.0.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.68.2",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/massim"]

[tool.scikit-build.cmake]
#build-type = "Debug"
#build-type = "RelWithDebInfo"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "ipython>=9.14.1",
]
