[project]
name = "massim"
version = "0.9.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "theinfinitegirl", email = "gretchenlynhall@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "igraph>=1.0.0",
    "matplotlib>=3.0",
    "numpy>=1.1.0",
    "scikit-image>=0.25",
    "pandas>=2.0.3",
    "scipy>=1.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.68.2",
]


[project.scripts]
massim = "massim:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
sdist.exclude = ["baseline*"]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "delocate>=0.13.0",
    "ipympl>=0.8.0",
    "ipython>=8.0.0",
    "pytest>=9.1.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.cibuildwheel.environment]
MACOSX_DEPLOYMENT_TARGET = "15.0"
